apps/base/dev-gitea/deploy/postgres/pgsql-statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pgsql
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: gitea
      app.kubernetes.io/component: pgsql
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gitea
        app.kubernetes.io/component: pgsql
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 70 # postgres
        fsGroup: 70
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: pgsql
        image: "registry.lan/gitea-postgres:15.19-alpine3.24"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5432
          name: pgsql
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop:
              - ALL
        readinessProbe:
           exec:
              command:
                - /bin/sh
                - -c
                - exec pg_isready -U $POSTGRES_USER -d $POSTGRES_DB -h 127.0.0.1
        resources:
          requests:
            cpu: 50m
            memory: 256Mi
          limits:
            cpu: 250m
            memory: 256Mi
        volumeMounts:
        - name: cluster-config
          mountPath: /etc/localtime
          subPath: localtime
          readOnly: true
        - name: pgsql-data
          mountPath: /var/lib/postgresql/data
          subPath: data
        - name: run-volume
          mountPath: /var/run/postgresql/
        - name: tmp-volume
          mountPath: /tmp
      volumes:
      - name: cluster-config
        configMap:
          name: cluster-config
      - name: pgsql-data
        persistentVolumeClaim:
          claimName: pgsql-data
      - name: run-volume
        emptyDir: {}
      - name: tmp-volume
        emptyDir: {}
      imagePullSecrets:
      - name: docker-config
      nodeSelector:
        capability/general-purpose: 'yes'
