apps/base/dev-gitea/deploy/postgres/pgsql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgsql
spec:
  clusterIP: None
  ports:
  - port: 5432
  selector:
    app.kubernetes.io/name: gitea
    app.kubernetes.io/component: pgsql
