apps/base/dev-gitea/deploy/postgres/pgsql-networkPolicies.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-pgsql
spec:
  types: [Ingress]

  podSelector:
    matchLabels:
      app.kubernetes.io/name: gitea
      app.kubernetes.io/component: pgsql

  ingress:
    # Allow from gitea
    - ports:
        - port: pgsql
      from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: gitea
              app.kubernetes.io/component: gitea
